add chainname
